# duckpod_simulation_SNU_ARIL

./: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  README.md  duckpod_simulator.sln
Assets/: New Terrain 1.asset  build2nd_backup.fbx
Assets/Materials/: green.mat  red.mat
Assets/Scenes/: duckpod simulation.unity
Assets/Scripts/: CarController.cs  CarController_.cs  LineDraw.cs  SuspensionManager.cs  TwistImporter.cs  TwistManager_.cs  duckpod_key.py
Assets/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
Assets/meshes/: base_link.prefab  left_backwheel_1.prefab  left_backwheel_1.stl  left_backwheel_1_0.asset  left_frontwheel_1.prefab  lidar_1.prefab  lidar_1.stl  lidar_1_0.asset  middle_case_1.prefab  monitor_1.prefab  realsense256_1.prefab  realsense256_1.stl  realsense450_1.prefab  right_backwheel_1.prefab  (+6 more)
Assets/skate_sus_frame/: CMakeLists.txt  package.xml
Assets/skate_sus_frame/config/: joint_names_skate_sus_frame.yaml
Assets/skate_sus_frame/launch/: display.launch  gazebo.launch
Assets/skate_sus_frame/meshes/: LB_wheel.STL  LB_wheel.prefab  LB_wheel_0.asset  LF_wheel.STL  LF_wheel.prefab  LF_wheel_0.asset  LM_wheel.STL  LM_wheel.prefab  LM_wheel_0.asset  RB_wheel.STL  RB_wheel.prefab  RB_wheel_0.asset  RF_wheel.STL  RF_wheel.prefab  RF_wheel_0.asset  RM_wheel.STL  RM_wheel.prefab  RM_wheel_0.asset  base_link.STL  base_link.prefab  base_link_0.asset  base_link_1.asset  base_link_2.asset
Assets/skate_sus_frame/urdf/: skate_sus_frame.csv  skate_sus_frame.urdf
ProjectSettings/: ProjectSettings.asset
(+37 files in other folders)
